@@ -1,0 +1,1 @@
+Visit http://vasic.googlecode.com for information about the Vasic project.
