@@ -1,4 +1,16 @@
 ------------------------------------------------------------------------
+r6 | serge.vakulenko | 2008-04-28 21:56:12 +0400 (Пнд, 28 Апр 2008) | 3 lines
+
+File node.d renamed to tree.d.
+
+
+------------------------------------------------------------------------
+r5 | serge.vakulenko | 2008-04-28 21:40:01 +0400 (Пнд, 28 Апр 2008) | 3 lines
+
+Parser: implemented string literals.
+
+
+------------------------------------------------------------------------
 r4 | serge.vakulenko | 2008-04-28 21:01:00 +0400 (Пнд, 28 Апр 2008) | 3 lines
 
 Scanner made independent of parser.
